Navbar work and wrapper styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,84 @@
     width: 960px;
     
 }
+.navbar{
+    border-block-width:2px;
+    border-style: solid;
+}
+.navbar-brand{
+    background-color: aqua;
+    
+}
+#outset{
+    border-style: outset;
+}
+.nav-link{
+    /* width: 200px, 0, 0, 0;  */
+    /* float: right; */
+    padding-left: 200px;
+    border-right: thin;
+}
+hr{
+    line-height: 8px;
+    color: aqua;
+    border-color: aqua;
+    border-style:solid; 
+    height: 8px;
+}
+.nav-item{
+    border-right: 1px solid #000;
+
+}
+
+.nav-item:last-of-type {
+    border-right: none;
+}
+
+.double-space {
+    line-height: 2;
+  }
+  .card-img-top{
+    width: 350px; 
+    height: 350px; 
+
+  }
+  .card-body{
+      width: 350px; 
+  }
+  /* .wrapper{
+      padding: 20px;
+      boarder:solid; 
+      width: 3px; 
+  } */
+  .wrapper {
+    /* column-count: 2;
+    column-gap: 50px;
+    padding: 50px; */
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  .me {
+    float: left;
+    padding-right: 15px;
+  }
+  
+  p {
+    line-height: 1.6; 
+    font-family: Helvetica;
+    text-align: justify;
+    margin: 0;
+    font-size: 14px;
+  }
+  
+  .star {
+    float: left;
+    width: 250px;
+    shape-outside: url(https://upload.wikimedia.org/wikipedia/commons/3/34/Red_star.svg);
+    shape-margin:20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
+  
+  
